Add initial database setup and Python version specification
- Created `create_database.sql` for setting up the Tetris Dual database.
- Added `.python-version` file to specify Python 3.12.
- Updated `pyproject.toml` to restrict Python version to 3.11.x and added package configuration.
- Introduced `QUICKSTART.md` for a quick start guide on setting up the backend.
- Updated `main.py` to enhance startup and shutdown messages.
- Added `uv.lock` for dependency management.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tetris-dual-backend"
 version = "0.1.0"
 description = "FastAPI backend for Tetris Dual game"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
@@ -17,6 +17,9 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = []
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
+[dependency-groups]
+dev = []
 
