Add production configuration for Gunicorn and update environment settings
- Introduced `gunicorn.conf.py` for configuring Gunicorn with Uvicorn workers, optimizing server performance.
- Updated `.env.example` to include production settings for workers and logging.
- Added production start scripts for both Windows (`start-prod.bat`) and Unix-based systems (`start-prod.sh`) to streamline deployment.
- Updated `pyproject.toml` to include Gunicorn as a dependency for the backend.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,8 @@ CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 # Server Configuration
 HOST=0.0.0.0
 PORT=8000
+
+# Production Settings (Gunicorn)
+WORKERS=4
+LOG_LEVEL=info
+RELOAD=false
