--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
+    "gunicorn>=21.2.0",
     "sqlalchemy>=2.0.0",
     "pymysql>=1.1.0",
     "python-dotenv>=1.0.0",
